Reformated files. Added Peasant class. Fixed MateriaSource not doing deep copy of materias. Fixed MiningBarge not doing deep copy of lasers. Fixed some clang-tidy code. Clion is not so bad after all..

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -12,7 +12,7 @@
 
 NAME=sorcerer
 
-SRC= Sorcerer.cpp Victim.cpp Peon.cpp main.cpp
+SRC= Sorcerer.cpp Victim.cpp Peon.cpp main.cpp Peasant.cpp
 OBJ= $(SRC:%.cpp=%.o)
 
 CC= /usr/bin/clang++
